--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,134 @@
-#container {
-  text-align: center;
+// #container {
+//   text-align: center;
 
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+//   position: absolute;
+//   left: 0;
+//   right: 0;
+//   top: 50%;
+//   transform: translateY(-50%);
+// }
+
+// #container strong {
+//   font-size: 20px;
+//   line-height: 26px;
+// }
+
+// #container p {
+//   font-size: 16px;
+//   line-height: 22px;
+
+//   color: #8c8c8c;
+
+//   margin: 0;
+// }
+
+// #container a {
+//   text-decoration: none;
+// }
+
+.accordion{
+  border-radius: 3px;
+  //border: 1px solid #FFFFFF;
+  background-color: #FFFFFF;
+  margin-bottom: 15px;
+  .accordRow{
+      //border: 1px solid #cfcfcf;
+      border-top: 3px solid green;
+      padding-bottom: 14px;
+      border-radius: 3.5px;
+      .accordionLabel{
+          text-align: center;
+          font-weight: bold;
+          font-size: 17px;
+          color: #514D4C;
+          padding-left: 10px;
+          margin-top: 10px;
+          padding-bottom: 10px;
+      }
+      .accordionBox{
+          margin-bottom: -15px;
+          border-bottom: 1px solid #cfcfcf;
+          border-radius: 1.3px;
+          .iconPlus1{
+            //src/assets/icon/arrowIcon.png
+              background: url(/assets/icon/arrowIcon.png) no-repeat 98% 50%;
+              transition: 0.2s all;
+              width: 14px;
+              height: 8px;
+              display: block;
+              position: absolute;
+              right: 28px;
+              top: 32px;
+              // &.iconPlusAct1{
+              //     // background: url(../asssets/icon/arrowIcon.png) no-repeat 98% 50%;
+              //     // transform: rotate(180deg);
+              //     // transition: 0.2s all;
+              // }
+          }
+          .iconPlus2{
+              // background: url(../assets/icon/arrowIcon.png) no-repeat 98% 50%;
+              transition: 0.2s all;
+              width: 14px;
+              height: 8px;
+              display: block;
+              position: absolute;
+              right: 28px;
+              top: 32px;
+              // &.iconPlusAct2{
+              //     // background: url(../asssets/icon/arrowIcon.png) no-repeat 98% 50%;
+              //     // transform: rotate(180deg);
+              //     // transition: 0.2s all;
+              // }
+          }
+      }
+  }
+  .collapse{
+  
+      transition: all 0.2s ease;
+      height: 0;
+      opacity: 0;
+      visibility: hidden;
+      &.expand{
+          height: 100%;
+          opacity: 1;
+          transition: all 0.2s ease;
+          visibility: visible;
+      }
+  }
+}
+.accordIcon{
+  width:15px;
+  margin-right: 5px;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+.asteric-mark{
+  color: red;
+  font-weight: bold;
+}
+.labelText{
+  font-weight: bold;
+  color:black !important;
+  margin-bottom: 5px !important;
+}
+.inputBox{
+  border: 1px solid #cfcfcf;
+  color: #898989 !important;
+  padding-left: 10px;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
+.item-block{
+  border-top: none;
+  .item-inner{
+      border: none !important;
+      border-bottom: none !important;
+      box-shadow: none !important;
+  }
 }
-
-#container a {
-  text-decoration: none;
+.grid{
+  padding: 0px !important;
+}
+.item{
+  display: contents;
+  margin-left: 0px;
+  margin-right: 8px;
 }
