--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,38 +1,9 @@
-// #container {
-//   text-align: center;
-
-//   position: absolute;
-//   left: 0;
-//   right: 0;
-//   top: 50%;
-//   transform: translateY(-50%);
-// }
-
-// #container strong {
-//   font-size: 20px;
-//   line-height: 26px;
-// }
-
-// #container p {
-//   font-size: 16px;
-//   line-height: 22px;
-
-//   color: #8c8c8c;
-
-//   margin: 0;
-// }
-
-// #container a {
-//   text-decoration: none;
-// }
 
 .accordion{
   border-radius: 3px;
-  //border: 1px solid #FFFFFF;
   background-color: #FFFFFF;
   margin-bottom: 15px;
   .accordRow{
-      //border: 1px solid #cfcfcf;
       border-top: 3px solid green;
       padding-bottom: 14px;
       border-radius: 3.5px;
@@ -59,14 +30,8 @@
               position: absolute;
               right: 28px;
               top: 32px;
-              // &.iconPlusAct1{
-              //     // background: url(../asssets/icon/arrowIcon.png) no-repeat 98% 50%;
-              //     // transform: rotate(180deg);
-              //     // transition: 0.2s all;
-              // }
           }
           .iconPlus2{
-              // background: url(../assets/icon/arrowIcon.png) no-repeat 98% 50%;
               transition: 0.2s all;
               width: 14px;
               height: 8px;
@@ -74,11 +39,6 @@
               position: absolute;
               right: 28px;
               top: 32px;
-              // &.iconPlusAct2{
-              //     // background: url(../asssets/icon/arrowIcon.png) no-repeat 98% 50%;
-              //     // transform: rotate(180deg);
-              //     // transition: 0.2s all;
-              // }
           }
       }
   }
@@ -109,11 +69,13 @@
   font-weight: bold;
   color:black !important;
   margin-bottom: 5px !important;
+  margin-top: 15px;
 }
 .inputBox{
   border: 1px solid #cfcfcf;
   color: #898989 !important;
   padding-left: 10px;
+  width:120%;
 }
 
 .item-block{
@@ -131,4 +93,10 @@
   display: contents;
   margin-left: 0px;
   margin-right: 8px;
+}
+.selectClass{
+  width:545px;
+}
+ion-datetime{
+  width:245px !important;
 }
